# ReactProjectForTests

./: .gitignore  README.md  TestManagement.sln
backend/TestManagement.Api/: Program.cs  TestManagement.Api.csproj  appsettings.json
backend/TestManagement.Api/Application/DTOs/: TestDtos.cs  TestWriteRequests.cs
backend/TestManagement.Api/Application/Exceptions/: NotFoundException.cs  ValidationException.cs
backend/TestManagement.Api/Application/Interfaces/: IRepository.cs  IScoreCalculator.cs  ITestRepository.cs  ITestRequestValidator.cs  ITestService.cs  ITestTakingService.cs
backend/TestManagement.Api/Application/Mapping/: TestMappingExtensions.cs
backend/TestManagement.Api/Application/Services/: ScoreCalculator.cs  TestService.cs  TestTakingService.cs
backend/TestManagement.Api/Application/Validation/: TestRequestValidator.cs
backend/TestManagement.Api/Domain/Entities/: AnswerOption.cs  Question.cs  TestDefinition.cs
backend/TestManagement.Api/Domain/Enums/: QuestionType.cs
backend/TestManagement.Api/Infrastructure/Data/: ApplicationDbContext.cs  DatabaseInitializer.cs
backend/TestManagement.Api/Infrastructure/Repositories/: EfRepository.cs  (+1 more)
backend/TestManagement.Api/Properties/: launchSettings.json
backend/TestManagement.Api/wwwroot/: app.js  index.html  styles.css
frontend/: index.html  package.json
frontend/src/: App.tsx  styles.css  types.ts
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src/api/: testsApi.ts
tests/TestManagement.Tests/: ScoreCalculatorTests.cs  TestManagement.Tests.csproj  TestServiceUpdateTests.cs
(+2 files in other folders)
