[package]
name = "test-management-desktop"
version = "0.1.0"
description = "Desktop wrapper for the test management app"
authors = ["Test Management"]
edition = "2021"

[lib]
name = "test_management_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
